--- a/jonathanBeard/admin/config.yml
+++ b/jonathanBeard/admin/config.yml
@@ -1,17 +1,16 @@
 backend:
-name: git-gateway
-branch: main # or your default branch
+  name: git-gateway
+  branch: main  # or 'master' depending on your repo
 
-media_folder: "static/img"
-public_folder: "/img"
+media_folder: "jonathanBeard/images/uploads"
+public_folder: "/images/uploads"
 
 collections:
-- name: "blog"
-label: "Blog"
-folder: "content/blog"
-create: true
-slug: "{{slug}}"
-fields:
-- {label: "Title", name: "title", widget: "string"}
-- {label: "Publish Date", name: "date", widget: "datetime"}
-- {label: "Body", name: "body", widget: "markdown"}
+  - name: "pages"
+    label: "Pages"
+    files:
+      - label: "Homepage"
+        name: "homepage"
+        file: "jonathanBeard/index.html"
+        fields:
+          - {label: "Intro Text", name: "body", widget: "markdown"}
